get bus tests passing again